--- a/Plum/Base.lproj/Main.storyboard
+++ b/Plum/Base.lproj/Main.storyboard
@@ -122,6 +122,29 @@
                                             <outlet property="cellTitle" destination="BLW-hI-3AX" id="jDM-qh-Epy"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="profileListButtonTableViewCell" id="kgO-iB-whj" customClass="ProfileListButtonTableViewCell" customModule="Plum" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="248" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kgO-iB-whj" id="sCe-ZL-grX">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nmg-Wa-jjH">
+                                                    <rect key="frame" x="16" y="6" width="95" height="30"/>
+                                                    <state key="normal" title="Profile Details">
+                                                        <color key="titleColor" red="1" green="0.2347312272" blue="0.31448560949999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </state>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="nmg-Wa-jjH" firstAttribute="centerY" secondItem="sCe-ZL-grX" secondAttribute="centerY" id="Gkb-VK-6k9"/>
+                                                <constraint firstItem="nmg-Wa-jjH" firstAttribute="leading" secondItem="sCe-ZL-grX" secondAttribute="leadingMargin" constant="8" id="VcA-oh-bZF"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="cellButton" destination="nmg-Wa-jjH" id="Drv-jD-dKF"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </prototypes>
                             </tableView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile_empty_indicator" translatesAutoresizingMaskIntoConstraints="NO" id="sHB-Yk-iU3" customClass="SpringImageView" customModule="Plum" customModuleProvider="target">
